@@ -1,0 +1,56 @@
+<h1>東京瘋狂一周！50週年Hello Kitty咖啡館、裸祭、煙花秀等你來</h1>
+<p>東京瘋狂一周！50週年凱蒂貓咖啡館、裸祭、煙花秀等你來</p>
+<p></p>
+<p>本週在東京，你需要跳躍整個城市以戰勝錯失恐懼症（FOMO）。菜單上有：梅酒和啤酒是首選飲料，煙花秀再度登場，凱蒂貓50週年慶祝活動等。另外，在千葉縣，你可以參加裸祭（不需要脫衣服）或觀看極限運動會。</p>
+<p></p>
+<p>東京演藝節在池袋</p>
+<p></p>
+<p>在東京國際演藝節中，你可以深入了解日本的表演藝術，包括當代歌舞伎、舞蹈和音樂劇。節目中包括英語支持，在演出前和演出期間都有提供。</p>
+<p></p>
+<p>大溪地海瓦節</p>
+<p></p>
+<p>這是一個難得的機會，可以在東京享受大溪地文化。前往武藏小杉，享受美食、新鮮鳳梨汁、大溪地啤酒、音樂、舞蹈、服裝等。這個節日自2008年開始舉辦（以前在御台場的Venus Fort舉辦），是一個適合全家人的便宜又有趣的活動。</p>
+<p></p>
+<p>湯島梅酒節</p>
+<p></p>
+<p>梅酒是日本最受歡迎的飲料之一，以甜美和酸甜的味道而聞名。如果你知道三得利和寶酒造的區別，湯島梅酒節是一個必訪的活動。</p>
+<p></p>
+<p>預售票：¥2,500 | 現場票：¥2,500</p>
+<p></p>
+<p>芝公園慕尼黑啤酒節秋季</p>
+<p></p>
+<p>儘管名稱是慕尼黑啤酒節，但這個活動將在9月份的芝公園舉辦，特色是德國音樂、食物和啤酒。在兩個星期內，你可以在芝公園享受德國文化。</p>
+<p></p>
+<p>預售票：¥500 | 現場票：¥500</p>
+<p></p>
+<p>大原裸祭</p>
+<p></p>
+<p>在你有任何邪念之前，大原裸祭（大原裸祭）其實應該被稱為大原“半裸”祭。舞蹈者的服裝其實相當保守。在節日的第一天，參與者會將神轎（mikoshi）抬到海邊進行浸泡。</p>
+<p></p>
+<p>日本索卡週末</p>
+<p></p>
+<p>日本索卡週末是亞洲最大的索卡音樂節，索卡是一種加勒比海音樂。它通常在每年的9月份舉辦，吸引了來自世界各地的音樂迷。這是一個體驗加勒比海文化的好地方。</p>
+<p>東京瘋狂一周！50週年凱蒂貓咖啡館、裸祭、煙花秀等你來</p>
+<p></p>
+<p>東京的節日和活動總是琳瑯滿目，讓人目不暇接。這一周，除了傳統的節日和活動外，還有許多新穎的體驗等待著你。</p>
+<p></p>
+<p>六本木的當地節日——六本木祭（Roppongi Matsuri），雖然規模不大，但如果你恰好在附近，還是值得一看。這個節日的官方名稱是天祖神社例大祭（Tensojinja Reitaisai）。</p>
+<p></p>
+<p>如果你是凱蒂貓的粉絲，不要錯過這個機會！為慶祝凱蒂貓50週年，特別推出了一個紅色主題的快閃咖啡館——Hello Kitty 50th Anniversary Café。菜單上有許多特別的選擇，包括一個兩層的下午茶、印有凱蒂貓臉的煎餅，以及三明治和義大利麵等鹹食。預售票價為660日元。</p>
+<p></p>
+<p>另外，東京國立博物館（Tokyo National Museum）在9月的第三個星期一——敬老日——將免費開放常設展覽。博物館展出約600件藝術品，包括繪畫、書法、雕塑和考古等領域。對於武士迷來說，還有武器和盔甲展覽。</p>
+<p></p>
+<p>如果你喜歡棒球，千萬不要錯過東京巨蛋（Tokyo Dome）上的讀賣巨人（Yomiuri Giants）比賽。日本的棒球比賽是一種獨特的體驗，不論你是哪隊的粉絲。</p>
+<p></p>
+<p>還有，東京廉價（Tokyo Cheapo）將舉辦第50屆Downtown Drinks活動，歡迎大家參加，享受美酒和交際的樂趣。</p>
+<p></p>
+<p>此外，日本機器人週（Japan Robot Week）是一個專注於“服務機器人”的貿易展覽。如果你想知道什麼是服務機器人，主辦方舉了護理機器人、生活支援機器人和災害應對機器人等例子。入場免費，但需要提前註冊。</p>
+<p></p>
+<p>如果你錯過了青森的世界著名的ねぶた祭（Nebuta Festival），可以在品川體驗一個迷你版的中延ねぶた祭り（Nakanobu Nebuta Festival）。這個節日從1989年開始舉辦，主遊行將在下午5點到晚上8點之間舉行。</p>
+<p></p>
+<p>最後，調布市煙花大會（Chōfu City Fireworks Festival）將在多摩川的草坪上舉行，主辦方準備了1萬枚煙花，預計將吸引35萬人觀賞。</p>
+<p>和平日（Peace Day）與極限運動會（X Games）齊聚東京</p>
+<p></p>
+<p>2024年的和平日將匯聚一眾志同道合的人，共同推廣和平與團結。這是一個在代々木公園舉行的戶外節日，內容豐富多彩。你將會聽到嘉賓演講，欣賞現場音樂表演，並參觀一些獨特的藝術展覽。</p>
+<p></p>
+<p>另外，經典的滑板和BMX賽事——極限運動會將在千葉舉行。準備好欣賞三天的華麗技巧和空中翻轉吧！極限運動會是BMX和滑板界最具代表性的盛事，因此屆時將會有眾多精英運動員參賽。</p>
