@@ -2,3 +2,4 @@ https://tokyocheapo.com/entertainment/infographic-koyo-tokyo-autumn-leaves/
 https://tokyocheapo.com/entertainment/event-posts/the-biggest-autumn-fireworks-festival-returns-to-tokyo-this-week/
 https://tokyocheapo.com/entertainment/tokyo-events-october/
 https://tokyocheapo.com/entertainment/event-posts/tokyo-events-this-week-tokyo-game-show-kita-fireworks-and-chestnuts/
+https://tokyocheapo.com/entertainment/event-posts/tokyo-events-this-week-colorful-floats-chofu-fireworks-and-performing-arts/
